web/bundles/dodicifansworldweb/less/token-input/token-input-fansworld.less
/* Example tokeninput style #2: fansworld style */

ul.token-input-list-fansworld {
    .border-radius(3px);
    overflow: hidden; 
    height: auto !important; 
    height: 1%;
    width: 411px;
    border: 2px solid #e2e2e4;
    cursor: text;
    font-size: 12px;
    font-family: Verdana;
    min-height: 1px;
    z-index: 999;
    margin: 0;
    padding: 0;
    background-color: @white;
    list-style-type: none;
    clear: left;
}

ul.token-input-list-fansworld li input {
    border: 0;
    width: 100px;
    padding: 3px 8px;
    background-color: @white;
    margin: 2px 0;
    -webkit-appearance: caret;
}

li.token-input-token-fansworld {
    overflow: hidden; 
    height: auto !important; 
    height: 15px;
    margin: 3px;
    padding: 1px 3px;
    background-color: @green;
    color: @white;
    cursor: default;
    border: 1px solid @grayDark;
    font-size: 11px;
    .border-radius(3px);
    float: left;
    white-space: nowrap;
}

li.token-input-token-fansworld p {
    display: inline;
    padding: 0;
    margin: 0;
}

li.token-input-token-fansworld span {
    color: #a6cfaa;
    margin-left: 5px;
    font-weight: bold;
    cursor: pointer;
}

li.token-input-selected-token-fansworld {
    background-color: @green;
    border: 1px solid @white;
    color: @black;
}

li.token-input-input-token-fansworld {
    float: left;
    margin: 0;
    padding: 0;
    list-style-type: none;
}

div.token-input-dropdown-fansworld {
    position: absolute;
    width: 411px;
    background-color: #fff;
    overflow: hidden;
    border-left: 1px solid #ccc;
    border-right: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
    .border-radius(3px);
    cursor: default;
    font-size: 11px;
    z-index: 1;
}

div.token-input-dropdown-fansworld p {
    margin: 0;
    padding: 5px;
    font-weight: bold;
    color: #777;
}

div.token-input-dropdown-fansworld ul {
    margin: 0;
    padding: 0;
}

div.token-input-dropdown-fansworld ul li {
    background-color: #fff;
    padding: 3px;
    margin: 0;
    list-style-type: none;
}

div.token-input-dropdown-fansworld ul li.token-input-dropdown-item-fansworld {
    background-color: #fff;
}

div.token-input-dropdown-fansworld ul li.token-input-dropdown-item2-fansworld {
    background-color: #fff;
}

div.token-input-dropdown-fansworld ul li em {
    font-weight: bold;
    font-style: normal;
}

div.token-input-dropdown-fansworld ul li.token-input-selected-dropdown-item-fansworld {
    background-color:  @green;
    color: @white;
}

